<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sota</string>
    <string name="mabox_access_token">pk.eyJ1Ijoia25lbWkiLCJhIjoiY2p0eGF2MnkwMHg4aTQ0cGxxNmppZG51ZyJ9.sizEB0ZAWhpulsFUFhGVFw</string>
    <string name="app_center_key" tools:ignore="TypographyDashes">0a591f1a-d402-4b85-be43-57d7c041228a</string>
    <string name="cloud_payments_public_key">pk_0eb073bf9a4ef06236369e9ccffbc</string>
    <string name="login_label">Введите свой номер</string>
    <string name="login_sub_label">Мы отправим код для подтверждения номера телефона.</string>
    <string name="login_agree"><u>Cогласен с пользовательским соглашением</u></string>
    <string name="login_get_code">Запросить код</string>
    <string name="login_agree_and_get_code">Согласиться и запросить код</string>
    <string name="login_oops">Что-то пошло не так. Проверьте правильность введённых данных</string>
    <string name="login_code">Код подтверждения</string>
    <string name="login_input_code">Введите код, высланный на номер</string>
    <string name="login_request_code_again">Запросить код повторно</string>
    <string name="login_ticker_text">Отправить код снова через</string>
    <string name="login_tutorial_label_1">Начало поездки</string>
    <string name="login_tutorial_body_1">Найдите свой скутер на карте, подойдите, отсканируйте его QR-код возле руля.</string>
    <string name="login_tutorial_label_2">Открой замок</string>
    <string name="login_tutorial_body_2">Открой замок. После включения самоката, выньте трос из гнезда, в месте, указанном стрелкой. Если самокат без электрического замка, отстегните карабин.</string>
    <string name="login_tutorial_label_3">Как набрать скорость</string>
    <string name="login_tutorial_body_3">Оттолкнитесь ногой для начала движения, используйте правый рычаг для ускорения</string>
    <string name="login_tutorial_label_4">Катайтесь безопасно</string>
    <string name="login_tutorial_body_4">Пожалуйста, не выезжайте на проезжую часть, не ускоряйтесь возле пешеходов.</string>
    <string name="login_tutorial_label_5">Места для катания</string>
    <string name="login_tutorial_body_5">В некоторых районах катание и парковка не разрешены. Мы покажем на карте.</string>
    <string name="login_tutorial_label_6">Паркуйте ответственно</string>
    <string name="login_tutorial_body_6">Пожалуйста, не блокируйте дороги и оставляйте место для пешеходов.</string>
    <string name="finish_tutorial_title_1">Пристегните замок</string>
    <string name="finish_tutorial_body_1">Пристегните замок как показано на рисунке и нажмите далее</string>
    <string name="finish_tutorial_title_2">Поездка завершена!</string>
    <string name="finish_tutorial_body_2">Спасибо что пользуетесь сервисом SOTA</string>
    <string name="privacy_policy_label">Политика конфиденциальности</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_purse">Кошелёк</string>
    <string name="menu_drivings">Поездки</string>
    <string name="menu_promo">Промоакции</string>
    <string name="menu_learn">Обучение</string>
    <string name="menu_help">Помощь</string>
    <string name="menu_greeting">Привет, мы рады видеть тебя!</string>
    <string name="menu_balance">Баланс</string>
    <string name="connect_with">Связаться через:</string>
    <string name="mock_zero_balance">0.00р</string>
    <string name="date">Дата</string>
    <string name="card">Карта</string>
    <string name="sum">Сумма</string>
    <string name="help">Помощь</string>
    <string name="call_to_free_number">Позвонить по бесплатному номеру</string>
    <string name="invite_friends">Пригласить друзей</string>
    <string name="invite_friends_and_get_bonus">Пригласи друга, и получите бонусы на поездки</string>
    <string name="share">Поделиться</string>
    <string name="promotionals">Промоакции</string>
    <string name="code_phone_hint">XXXX</string>
    <string name="look">Посмотреть</string>
    <string name="promocodes">Промокоды</string>
    <string name="activate_promocode_here">Активируйте промокод здесь</string>
    <string name="invite">Пригласить</string>
    <string name="my_promo">Мои промоакции</string>
    <string name="attach_promotional">Добавить промокод</string>
</resources>