<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuMapItemProfile"
        android:icon="@drawable/ic_menu_icon_profile"
        android:title="@string/menu_profile" />
    <item
        android:id="@+id/menuMapItemPurse"
        android:icon="@drawable/ic_menu_icon_purse"
        android:title="@string/menu_purse" />
    <item
        android:id="@+id/menuMapItemDrivings"
        android:icon="@drawable/ic_menu_icon_scooter"
        android:title="@string/menu_drivings" />
    <item
        android:id="@+id/menuMapItemPromo"
        android:icon="@drawable/ic_menu_icon_promo"
        android:title="@string/menu_promo" />
    <item
        android:id="@+id/menuMapDoc"
        android:icon="@drawable/ic_receipt"
        android:title="Документы" />
    <item
        android:id="@+id/menuMapItemLearn"
        android:icon="@drawable/ic_menu_icon_info"
        android:title="@string/menu_learn" />
    <item
        android:id="@+id/menuMapItemHelp"
        android:icon="@drawable/ic_menu_icon_help"
        android:title="@string/menu_help" />
</menu>