<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageButton
            android:id="@+id/main_promo_image_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/ic_back_arrow"
            android:padding="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="16dp"
            android:text="@string/promotionals"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardElevation="4dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"

                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:textColor="@color/segment_black"
                            android:text="@string/promocodes"
                            android:textStyle="bold"
                            android:fontFamily="@font/robotoregular"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:layout_marginTop="8dp"
                            android:textColor="@color/gray"
                            android:text="@string/activate_promocode_here"
                            android:textStyle="bold"
                            android:fontFamily="@font/robotoregular"/>

                    </LinearLayout>

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_promo"/>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonLook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_curved_gradient"
                    android:enabled="true"
                    android:padding="4dp"
                    android:text="@string/look"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </LinearLayout>

    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardElevation="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:cardCornerRadius="8dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"

                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:textColor="@color/segment_black"
                            android:text="@string/invite_friends"
                            android:textStyle="bold"
                            android:fontFamily="@font/robotoregular"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:layout_marginTop="8dp"
                            android:textColor="@color/gray"
                            android:text="@string/invite_friends_and_get_bonus"
                            android:textStyle="bold"
                            android:fontFamily="@font/robotoregular"/>

                    </LinearLayout>

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_invite"/>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonInvite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_curved_gradient"
                    android:enabled="true"
                    android:padding="4dp"
                    android:text="@string/invite"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>