<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.promo.InviteFriendsActivity"
    android:orientation="vertical">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageButton
            android:id="@+id/invite_friends_image_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/ic_back_arrow"
            android:padding="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="16dp"
            android:text="@string/invite_friends"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@drawable/scan_me" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:text="@string/invite_friends_and_get_bonus"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/share_with_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_curved_gradient"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            app:backgroundTint="@null"

            android:gravity="center"

            android:layout_marginBottom="16dp"
            app:icon="@drawable/ic_link"
            app:iconGravity="textStart"

            />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>