<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageButton
            android:id="@+id/help_image_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/ic_back_new"
            android:padding="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="16dp"
            android:text="@string/help"
            app:fontFamily="@font/geometria"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/connect_with"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:fontFamily="@font/geometria"
        android:layout_marginTop="18dp"
        android:textColor="@color/gray"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/help_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/item_help_list"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        />
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/phone_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_stroke_red"
            android:text="@string/call_to_free_number"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16dp"
            app:backgroundTint="@null"
            android:gravity="center"
            android:layout_marginBottom="16dp" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>