<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageButton
            android:id="@+id/main_promo_image_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/ic_back_arrow"
            android:padding="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="16dp"
            android:text="@string/my_promo"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:gravity="center"
            android:textColor="@color/segment_black"
            android:layout_marginTop="64dp"
            android:text="Введите промокод"
            android:textStyle="bold"
            android:fontFamily="@font/robotoregular"/>

        <com.chaos.view.PinView
            android:id="@+id/loginCodePinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_marginTop="64dp"
            android:focusableInTouchMode="true"
            android:hint="@string/code_phone_hint"
            android:inputType="numberDecimal"
            android:textSize="24dp"
            app:itemCount="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lineColor="@color/gray_edit_text"
            app:viewType="line" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAttachPromo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/ic_curved_gradient"
            android:enabled="true"
            android:padding="4dp"
            android:text="@string/attach_promotional"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />


    </LinearLayout>

</LinearLayout>